first index of repos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #ddddd;
-    font-family: 'Open Sans', 'Times New Roman', Times, serif;;
-    font-size: 12pt: 
+    background-color: #dddddd;
+    font-family: 'Open Sans', 'Times New Roman', Times, serif;
+    font-size: 14pt;
 }
 
 
 h1 {
-    font-family: font-family: 'Permanent Marker', sans-serif;
-    font-size: 20pt;
+    font-family: 'Permanent Marker', sans-serif;
+    font-size: 40pt;
     margin-bottom: 1em;
 }
 
@@ -19,4 +19,14 @@ ul {
 p, ul, li {
     line-height: 170%;
     margin-bottom: 1em; /* restores spacing after the tag */
+}
+
+a {
+    color: blue;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: blue;
+    color: #ffffff;
 }
