--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@ body {
     font-size: 14pt;
 }
 
-
 h1 {
     font-family: 'Permanent Marker', sans-serif;
     font-size: 40pt;
@@ -29,4 +28,11 @@ a {
 a:hover {
     background-color: blue;
     color: #ffffff;
+}
+
+#body-wrapper {
+    width: 960px;
+    margin: 4px;
+    border-left: 2px solid #aaaaaa;
+    padding-left: 4px;
 }
