--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 h1 {
     font-family: 'Permanent Marker', sans-serif;
     font-size: 40pt;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 
 ul {
@@ -20,19 +20,9 @@ p, ul, li {
     margin-bottom: 1em; /* restores spacing after the tag */
 }
 
-a {
-    color: blue;
-    text-decoration: none;
-}
 
-a:hover {
-    background-color: blue;
-    color: #ffffff;
-}
 
-#body-wrapper {
-    width: 960px;
-    margin: 4px;
+.mainbody {
     border-left: 2px solid #aaaaaa;
     padding-left: 4px;
 }
