added unit-4 game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ body {
     font-size: 14pt;
 }
 
+img {
+    width: 300px;
+}
+
 h1 {
     font-family: 'Permanent Marker', sans-serif;
     font-size: 40pt;
