revised layout to 2 columns; added bamazon project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,10 @@ p {
     padding-left: 24px;
 }
 
+.card {
+    margin-bottom: 30px;
+}
+
 @media screen and (max-width: 600px) {
     .top-nav {
         margin-top: 0px;
